# inet-monitoring

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs  ping.rs  server.rs  speedtest.rs
